--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     <img src="Imagens/banner.png" alt="Banner da Página Inicial" class="banner-inicial-img">
   </div>
 </section>
+
+<section class="server-ip">
+  <div class="container">
+    <marquee behavior="scroll" direction="left" scrollamount="6" style="background:#222; color:#fff; padding:10px; border-radius:8px;">
+      🎮 Conecte-se agora: <strong>mc.megaskynetwork.com.br</strong> | 🔴 Estado do servidor: <strong>OFFLINE</strong> | <strong>Últimas notícias:</strong> pausa temporária no servidor.
+    </marquee>
+  </div>
+</section>
+
+
   <section class="noticias">
     <div class="container">
       <h2>Últimas Notícias</h2>
@@ -40,6 +50,14 @@
             <h3>LANÇAMENTO OFICIAL DO REMAKE DO SITE!</h3>
             <p>Confira as mudanças!</p>
             <a href="remakesite.html">Leia mais</a>
+          </div>
+        </article>
+        <article class="noticia">
+          <img src="Imagens/icone.png" alt="Notícia" />
+          <div>
+            <h3>ATIVIDADES DO SERVIDOR PAUSADAS POR TEMPO INDETERMINADO!!</h3>
+            <p>Confira os motivos!</p>
+            <a href="pausadoservidor.html">Leia mais</a>
           </div>
         </article>
       </div>
