--- a/Noticias.html
+++ b/Noticias.html
@@ -30,6 +30,18 @@
             <h1 class="section-title">Últimas Notícias</h1>
             <p class="section-description">Fique por dentro de todas as novidades e atualizações da MegaSky Network!</p>
 
+            
+            <div class="news-grid">
+                <article class="news-card">
+                    <img src="Imagens/banner.png" alt="Imagem da Notícia 1" class="news-image">
+                    <div class="news-content">
+                        <h2 class="news-title">ATIVIDADES DO SERVIDOR PAUSADAS POR TEMPO INDETERMINADO!</h2>
+                        <p class="news-meta">Publicado em 23 de agosto de 2025 | Categoria: Atualizações</p>
+                        <p class="news-excerpt">Entenda o motivo da pausa nas nossas atividades.</p>
+                        <a href="pausadoservidor.html" class="read-more-button">Ler Mais</a>
+                    </div>
+                </article>
+            </div>
             <div class="news-grid">
                 <article class="news-card">
                     <img src="Imagens/banner.png" alt="Imagem da Notícia 1" class="news-image">
@@ -41,6 +53,7 @@
                     </div>
                 </article>
             </div>
+
         </div>
     </main>
 
